fixed spacing of Widget Bundle and Magazine Blocks

--- a/assets/css/editor-styles.css
+++ b/assets/css/editor-styles.css
@@ -1020,6 +1020,7 @@ p.has-background {
 }
 
 .tz-magazine-block .tz-meta-field {
+	display: flex;
 	margin-right: 0;
 }
 
