--- a/sass/2-layout/sidebar.scss
+++ b/sass/2-layout/sidebar.scss
@@ -33,6 +33,10 @@
 			.is-style-widget-title {
 				margin: -0.5rem -0.5rem 1rem;
 			}
+
+			&.tzwb-tabbed-content .tzwb-tabnavi {
+				margin: -0.5rem -0.5rem 0;
+			}
 		}
 
 		&.has-box-shadow {
