--- a/sass/9-plugins/magazine-blocks.scss
+++ b/sass/9-plugins/magazine-blocks.scss
@@ -30,6 +30,7 @@
 }
 
 .tz-magazine-block .tz-meta-field {
+	display: flex;
 	margin-right: 0;
 }
 
