--- a/sass/9-plugins/widget-bundle.scss
+++ b/sass/9-plugins/widget-bundle.scss
@@ -1,7 +1,7 @@
 /* ThemeZee Widget Bundle Plugin */
 .tzwb-posts-list {
 	margin: 0;
-	padding-left: 0.75rem;
+	padding-left: 0.5rem;
 }
 
 .tzwb-posts-list li {
@@ -88,7 +88,7 @@
 
 .tzwb-tabbed-content .tzwb-tabnavi {
 	display: flex;
-	margin: -0.5rem -0.5rem 0;
+	margin: 0;
 	padding: 0;
 	flex-flow: row wrap;
 	list-style: none;
