--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/dynamico/
 Author: ThemeZee
 Author URI: https://themezee.com/
 Description: A responsive, multipurpose Blogging and Magazine WordPress theme with bold colors and fonts. It comes with a featured content area, various blog layouts and extensive post settings. Dynamico is the successor of the popular Dynamic News theme.
-Version: 1.0.8
+Version: 1.0.9
 Requires at least: 5.2
 Tested up to: 5.9
 Requires PHP: 5.6
@@ -1249,6 +1249,10 @@ body.site-description-hidden .site-header .site-description {
 	.has-sidebar .sidebar .widget .widget-title,
 	.has-sidebar .sidebar .widget .is-style-widget-title {
 		margin: -0.5rem -0.5rem 1rem;
+	}
+
+	.has-sidebar .sidebar .widget.tzwb-tabbed-content .tzwb-tabnavi {
+		margin: -0.5rem -0.5rem 0;
 	}
 
 	.has-sidebar.has-box-shadow .sidebar .widget {
@@ -3116,6 +3120,7 @@ figcaption,
 }
 
 .tz-magazine-block .tz-meta-field {
+	display: flex;
 	margin-right: 0;
 }
 
@@ -3452,7 +3457,7 @@ figcaption,
 /* ThemeZee Widget Bundle Plugin */
 .tzwb-posts-list {
 	margin: 0;
-	padding-left: 0.75rem;
+	padding-left: 0.5rem;
 }
 
 .tzwb-posts-list li {
@@ -3544,7 +3549,7 @@ figcaption,
 
 .tzwb-tabbed-content .tzwb-tabnavi {
 	display: flex;
-	margin: -0.5rem -0.5rem 0;
+	margin: 0;
 	padding: 0;
 	flex-flow: row wrap;
 	list-style: none;
